--- a/RoamAI/Views/Trip/CurrentTrip.cshtml
+++ b/RoamAI/Views/Trip/CurrentTrip.cshtml
@@ -48,7 +48,7 @@
         <!-- Include SweetAlert2 for notifications -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0w9MsYHLJdx_Wd-LOpP8ZgHGsy5mQXh4&callback=initMap" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=ApiKeyBuraya&callback=initMap" async defer></script>
 
         <script>
             let selectedLocations = []; // Array to store selected locations
