--- a/RoamAI/Views/Trip/RecommendationResult.cshtml
+++ b/RoamAI/Views/Trip/RecommendationResult.cshtml
@@ -42,7 +42,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Google Maps API script without the marker library -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=apikEY&callback=initMap" async defer></script>
 
 <script>
     let selectedLocations = []; // Array to store selected locations
