--- a/RoamAI/Views/Trip/TripDetail.cshtml
+++ b/RoamAI/Views/Trip/TripDetail.cshtml
@@ -66,7 +66,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0w9MsYHLJdx_Wd-LOpP8ZgHGsy5mQXh4&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=apikeyBuraya&callback=initMap" async defer></script>
 
 
 <script>
