Frontend düzenlemeleri yapıldı

--- a/RoamAI/Views/Shared/_Layout.cshtml
+++ b/RoamAI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
             color: white;
         }
 
+        .nav-link {
+            background-color: white;
+            border: 2px solid #bbbbbb; 
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+        }
+
 
         .navbar.bg-transparent {
             backdrop-filter: blur(5px); 
